--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
+    "@mui/x-data-grid": "^5.12.3",
     "@syncfusion/ej2-react-calendars": "^20.1.58",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
